Initial QC layout implementation

--- a/public/403.html
+++ b/public/403.html
@@ -27,6 +27,7 @@
           <ul class="static_error_list">
               <li>You have already claimed another document in this status.  Please release the document if you would like to open another.</li>
               <li>The document you are trying to open has already been claimed.</li>
+              <li>You have already submitted work for this document.</li>
               <li>Your login has expired.</li>
           </ul>
         <div class="static_error">
