--- a/public/403.html
+++ b/public/403.html
@@ -25,7 +25,7 @@
           You are not allowed to open the requested document.  One of the following may have occurred:
         </div>
           <ul class="static_error_list">
-              <li>You have already claimed another document in this status.  Please release the document if you would like to open another.</li>
+              <li>You have already claimed two documents in this status.  Please release one of the documents if you would like to open another.</li>
               <li>The document you are trying to open has already been claimed.</li>
               <li>You have already submitted work for this document.</li>
               <li>Your login has expired.</li>
