--- a/public/doc_404.html
+++ b/public/doc_404.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Document Not Found - DocumentCloud</title>
+  <title>Document Not Found - DACTYL</title>
   
   <link href="/stylesheets/common/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/ui/ui.css" media="all" rel="stylesheet" type="text/css" />
@@ -15,17 +15,15 @@
   <div id="container">
     <div id="topbar" class="header gradient_mid">
       <div id="cloud_edge"></div>
-      <div id="wordmark" class="logo_words"><a href="/">DocumentCloud</a></div>
+      <div id="wordmark" class="logo_words"><a href="/">DACTYL</a></div>
       <h1 id="title" class="logo_words">404 Not Found</h1>
     </div>
 
     <div id="content">
       <div class="full_page_background">
         <div class="static_error">
-          There is no document at this URL. Try checking for typos in the URL or searching our 
-          <a href="/public">public catalog</a>.<br />
-          If you're sure that the document should be here, send the URL to 
-          <a href="mailto:support@documentcloud.org">support@documentcloud.org</a>.
+          The document or data point your requested could not be found.
+          If you're sure that the document or point should be here, please contact the administrator.
         </div>
       </div>
     </div>
