--- a/public/login_403.html
+++ b/public/login_403.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Not Found - DACTYL</title>
+  <title>Forbidden - DACTYL</title>
   
   <link href="/stylesheets/common/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/ui/ui.css" media="all" rel="stylesheet" type="text/css" />
@@ -16,13 +16,13 @@
     <div id="topbar" class="header gradient_mid">
       <div id="cloud_edge"></div>
       <div id="wordmark" class="logo_words"><a href="/">DACTYL</a></div>
-      <h1 id="title" class="logo_words">404 Not Found</h1>
+      <h1 id="title" class="logo_words">403 Forbidden</h1>
     </div>
 
     <div id="content">
       <div class="full_page_background">
         <div class="static_error">
-          The page you tried to access could not be found.<br />
+          Your login is invalid.  Please contact the administrator.
         </div>
       </div>
     </div>
